--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,10 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <!--Comment out line below when running code as standalone jar-->
-                <!--				<excludes>-->
-                <!--					<exclude>**/log4j.properties</exclude>-->
-                <!--				</excludes>-->
+                <!-- Comment out line below when running code as standalone jar-->
+                <excludes>
+                    <exclude>**/log4j.properties</exclude>
+                </excludes>
             </resource>
         </resources>
         <plugins>
